Fix bug 843596 fallout. r=bhackett on IRC