js/src/methodjit/Compiler.cpp
@@ -987,8 +987,13 @@ mjit::CanMethodJIT(JSContext *cx, JSScript *script, jsbytecode *pc,
 {
     bool compiledOnce = false;
   checkOutput:
-    if (!cx->methodJitEnabled || ion::IsBaselineEnabled(cx))
+    if (!cx->methodJitEnabled)
         return Compile_Abort;
+
+#ifdef JS_ION
+    if (ion::IsBaselineEnabled(cx))
+        return Compile_Abort;
+#endif
 
     /*
      * If SPS (profiling) is enabled, then the emitted instrumentation has to be
