js/src/jit-test/tests/baseline/bug842431-2.js
@@ -1,3 +1,6 @@
+// |jit-test| no-jm
+// (disable with JM, see bug 845276)
+
 // If a frame's onPop handler throws, we should not call the
 // onExceptionUnwind hook for that frame.
 var g = newGlobal('new-compartment');
