js/src/jit-test/tests/baseline/bug842431-3.js
@@ -1,3 +1,6 @@
+// |jit-test| no-jm
+// (disable with JM, see bug 845276)
+
 // If an exception unwind hook performs a forced return, and this calls an
 // onPop handler that throws, the exception should not be handled in the
 // current frame but propagated to the caller.
